@@ -1,6 +1,10 @@
 1.0.3 (not yet released):
 - Modify the Makefile so we can choose the directory to save sources when
 creating RPMs.
+- Modify the Makefile so we can choose the directory where the binary packages
+are stored.
+- Enable the creation of unsigned Debian packages by setting the
+UNSIGNED_OSCAR_PKG environment variable.
 
 1.0.2:
 - Core packages are now always checked (a bug prevented to do so before).
